--- a/Code/src/web/views/user-guide.jade
+++ b/Code/src/web/views/user-guide.jade
@@ -15,15 +15,24 @@ block jumbo
 block content
     if (tier === 'SUPERVISOR' || tier === 'ADMINISTRATOR' || tier === 'ROOT' || tier === 'OFFICER')
         h3 Introduction
-        p &nbsp;&nbsp;&nbsp;&nbsp;Upon logging in you will be brought to the home
-            | page. This is where you will be able to view your BOLOs. Each BOLO
-            | has several buttons on it that will be explained later. From the
-            | home page, you will see several other links across the top (mobile
-            | will be in a dropdown menu accessible from the top right corner of
-            | your screen). These links will also be explained shortly and include
-            | a drop down menu to Create BOLO, Archive, Agency Directory, Search,
-            | Admin for the Administration and root users, a dropdown for user
-            | setting and a dropdown to Filter by Agency.
+        p &nbsp;&nbsp;&nbsp;&nbsp;Upon Welcome to the BOLO Flyer Crator, a Situational Awareness
+            | Multi-Jurisdictional Resource. Every user of BOLO has access to
+            | different features and therefore a different user's guide will be
+            | custom tailored specific to each user. Upon logging into BOLO you
+            | will be brought to the home page. This is where you view your BOLOs
+            | along with other BOLOs from officers within your agency. In addition
+            | to viewing BOLOs from your agency, you may also opt to view BOLOs
+            | from other agencies too. The first instruction will be the most
+            | important tailored for you. If you are root or admin, it will be user
+            | and agency management. for other user it will be how to create a bolo.
+            | A BOLO can have up to several buttons on it that will be explained.
+            | From the home page you will also see several other links accessible
+            | across the top. For mobile devices will have a dropdown menu accessible
+            | from the top right corner of your screen. All these links will be
+            | explained shortly in easy to follow step by step instructions. If some
+            | reason you notice something wrong with your user details (i.e. your
+            | have a name changeor something of that nature), you will need to
+            | contact your agency administration immediately.
         br
 
     if (tier === 'ADMINISTRATOR' || tier === 'ROOT')
