--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -31,9 +31,9 @@ block content
         +input_text( "vehicleIdNumber", "Vehicle Identification Number", "", false,  "" )
         .row
             .col-md-4
-                +select_options( "vehicleLicenseState", "Tag License Plate", states, false, "" )
+                +select_options( "vehicleLicenseState", "License Plate State", states, false, "" )
             .col-md-8
-                +input_text( "vehicleLicensePlate", "", "", false, "" )
+                +input_text( "vehicleLicensePlate", "License Plate Number", "", false, "" )
 
         .form-group.row
             .col-md-4
