--- a/Code/src/web/views/bolo-edit-boat-form.jade
+++ b/Code/src/web/views/bolo-edit-boat-form.jade
@@ -6,6 +6,7 @@ block jumbo
     .jumbotron
         .container
             p Update BOLO Details
+            button.btn.btn-primary(onclick='history.go(-1);') Go Back
 
 
 block content
