--- a/Code/src/web/views/system-setting.jade
+++ b/Code/src/web/views/system-setting.jade
@@ -5,25 +5,24 @@ include ./includes/mixins.jade
 
 block jumbo-desc
     p Admin Portal: System Settings
-            br
 
 block admin-content
-    - var route = '/admin/systemSetting';
+
+
     if ( tier === 'ROOT' )
         .col-xl-offset-2.col-xl-6.col-lg-offset-2.col-lg-6.col-md-offset-2.col-md-6
             p.lead Set the system settings
-            form( action=( route + form_action ) enctype="multipart/form-data" method="post" )
+            form( action=('admin/systemSetting') enctype="multipart/form-data" method="post" )
             .form-group
                 label Brute Force Login (3 - 10) Attempts&nbsp;&nbsp;
                 input(type='number', name='brute', min='3', max='10')
-            br
-            br
             .form-group
                 label System Timeout (10 - 240) Minutes&nbsp;&nbsp;
                 input(type='number', name='minutes', min='10', max='240')
-            br
-            br
-            input(type='submit', data-inline='true', value='Submit')
+            .form-group
+                button.btn.btn-primary( type="submit" value="save" ) Submit
+
 
     else
         P where did you come from?
+    .row
