update user's guide and fix bugs

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -36,11 +36,11 @@
     ]
 
     var bolo_status = [
-        '','Canceled', 'In Custody', 'Located', 'Recovered'
+        '','Cancelled', 'In Custody', 'Located', 'Recovered'
     ]
 
     var bolo_status_theft = [
-        '','Canceled', 'Recovered'
+        '','Cancelled', 'Recovered'
     ]
 
     var vehicles_makes = [
