--- a/Code/src/web/views/bolo-edit-boat-form.jade
+++ b/Code/src/web/views/bolo-edit-boat-form.jade
@@ -115,4 +115,4 @@ block content
         .form-group
             button.btn.btn-primary( type="submit" value="save" id= "buttonClickEdit" disabled = false ) Publish
             button.btn.btn-default( type="submit" disabled=true value="preview" ) Preview
-            button.btn.btn-default( type="submit" disabled=true value="pdf" ) PDF
+            //button.btn.btn-default( type="submit" disabled=false value="pdf" ) PDF
