--- a/Code/src/web/views/data-analysis.jade
+++ b/Code/src/web/views/data-analysis.jade
@@ -6,14 +6,15 @@ block jumbo-desc
 
 block admin-content
     if (tier === 'ROOT')
-        .col-xl-offset-2.col-xl-6.col-lg-offset-2.col-lg-6.hidden-md.hidden-sm.hidden-xs
-            p.lead Retrieve data for analysis
-            select.selectpicker(data-actions-box="true" id="agency-select" title="Select an Agency" mobile = "true" data-width="200px" multiple data-selected-text-format="count>1")
+        p.lead Retrieve data for analysis
+        .col-xl-3.col-lg-3.hidden-md.hidden-sm.hidden-xs
+            select.selectpicker.pull-left(data-actions-box="true" id="agency-select" title="Select an Agency" mobile = "true" data-width="200px" multiple data-selected-text-format="count>1")
                   for agency in agencies
                       option(value=agency.name ) #{agency.name}
 
             br
             br
+        .col-xl-3.col-lg-3.hidden-md.hidden-sm.hidden-xs
             .form-group
                 a.btn.btn-default.pull-left( id="download-button" type = "submit" value = "submit") Download
         .hidden-lg.hidden-xl
